--- a/index.html
+++ b/index.html
@@ -5,96 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title data-lang-key="page_title">Mikhail Lysyi | Personal Website</title>
     <style>
-        /* ... (styles unchanged for brevity) ... */
-        :root {
-            --bg-color: #f4f4f4;
-            --text-color: #333;
-            --header-bg: #fff;
-            --accent-color: #007bff;
-            --border-color: #ddd;
-            --timeline-line: #ccc;
-            --shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
-        body.dark-theme {
-            --bg-color: #121212;
-            --text-color: #f1f1f1;
-            --header-bg: #1e1e1e;
-            --accent-color: #4dabf7;
-            --border-color: #444;
-            --timeline-line: #555;
-            --shadow: 0 2px 5px rgba(0,0,0,0.4);
-        }
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-            margin: 0;
-            background-color: var(--bg-color);
-            color: var(--text-color);
-            transition: background-color 0.3s, color 0.3s;
-            line-height: 1.6;
-        }
-        .container { max-width: 900px; margin: 0 auto; padding: 20px; }
-        a { color: var(--accent-color); text-decoration: none; }
-        a:hover { text-decoration: underline; }
-        header {
-            background-color: var(--header-bg);
-            padding: 20px;
-            border-bottom: 1px solid var(--border-color);
-            box-shadow: var(--shadow);
-            position: sticky; top: 0; z-index: 100;
-        }
-        .header-content { display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; }
-        .header-title h1 { margin: 0; }
-        .header-title p { margin: 5px 0 0; opacity: 0.8; }
-        .controls { display: flex; align-items: center; gap: 15px; margin-top: 10px; }
-        .controls button { background: none; border: 1px solid var(--border-color); color: var(--text-color); padding: 5px 10px; cursor: pointer; border-radius: 5px; }
-        nav ul { display: flex; gap: 20px; list-style: none; padding: 0; margin: 20px 0 0; border-bottom: 1px solid var(--border-color); }
-        nav li { padding: 10px 5px; cursor: pointer; border-bottom: 3px solid transparent; }
-        nav li.active { border-bottom-color: var(--accent-color); color: var(--accent-color); font-weight: bold; }
-        .tab-content { display: none; }
-        .tab-content.active { display: block; animation: fadeIn 0.5s; }
-        @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
-        h2, h3, h4 { color: var(--text-color); }
-        ul { padding-left: 20px; }
-        .timeline {
-            border-left: 2px solid var(--timeline-line);
-            padding: 20px 0 20px 30px;
-            position: relative;
-        }
-        .timeline-item {
-            position: relative;
-            margin-bottom: 30px;
-            background: var(--header-bg);
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: var(--shadow);
-        }
-        .timeline-item::before {
-            content: attr(data-year);
-            position: absolute;
-            left: -140px; 
-            width: 80px;
-            text-align: right;
-            top: 20px;
-            font-weight: bold;
-            color: var(--accent-color);
-        }
-        .timeline-item::after {
-            content: '';
-            position: absolute;
-            left: -38px;
-            top: 25px;
-            width: 12px;
-            height: 12px;
-            border-radius: 50%;
-            background: var(--bg-color);
-            border: 3px solid var(--accent-color);
-        }
-        .skills-languages { display: flex; gap: 30px; flex-wrap: wrap; }
-        .skills-list, .languages-table { flex: 1; min-width: 280px; }
-        .languages-table table { width: 100%; border-collapse: collapse; }
-        .languages-table th, .languages-table td { border: 1px solid var(--border-color); padding: 8px; text-align: left; }
-        /* New Reference Letters Section styles */
-        #reference-letters { margin-top: 40px; }
+        /* ...styles unchanged... */
     </style>
 </head>
 <body class="light-theme">
@@ -199,12 +110,8 @@
                     <p data-lang-key="vol4_desc"></p>
                 </article>
                 <article class="timeline-item" data-year="2021">
-                    <h4>
-                        <a href="https://www.erciyes.edu.tr/tr/etkinlik-detay/bir-gun-degil-her-gun-3-aralik/7214" target="_blank" style="color:inherit;text-decoration:inherit;">
-                            <span data-lang-key="vol5_title">Pianist</span>
-                        </a>
-                    </h4>
-                    <p><i>Erciyes Culture Centre, Kayseri, Turkey</i></p>
+                    <h4 data-lang-key="vol5_title"></h4>
+                    <p data-lang-key="vol5_loc"></p>
                     <p data-lang-key="vol5_desc"></p>
                 </article>
             </div>
@@ -247,7 +154,6 @@
                 <h3 data-lang-key="reference_letters_title">Reference Letters</h3>
                 <ul data-lang-key="reference_letters_list">
                     <li>Available upon request.</li>
-                    <!-- You can add actual references/links here if you have them -->
                 </ul>
             </section>
         </section>
@@ -275,6 +181,7 @@
                 }
             });
             document.getElementById('theme-toggle').addEventListener('click', () => document.body.classList.toggle('dark-theme'));
+
             const translations = {
                 en: {
                     page_title: "Mikhail Lysyi | Personal Website", name: "Mikhail Lysyi", subtitle: "English Teacher | Traveler | Organizer",
@@ -296,7 +203,8 @@
                     work3_title: "Junior Technical Specialist | Uberfon", work3_loc: "Saint Petersburg, Russia",
                     work3_desc: "<li>Performing professional repairs on Apple devices in a team of specialists.</li><li>Quick learning of new Apple product features and reparation processes.</li><li>Reporting, cash register management, and communication with suppliers.</li>",
                     volunteer_title: "Volunteer Work",
-                    vol1_title: 'Erasmus Student Volunteer, Organizator | <a href="https://www.esn.sk/" target="_blank">ESN</a>', vol1_loc: 'Matej Bel University, Banská Bystrica',
+                    vol1_title: "Erasmus Student Volunteer, Organizator | ESN",
+                    vol1_loc: 'Matej Bel University, Banská Bystrica',
                     vol1_desc: "<li>Participating in budget decision-making.</li><li>Event management.</li><li>Monitoring of incoming student wellbeing.</li>",
                     vol2_title: 'Swimming teacher, tutor | CERT / <a href="https://youth.europa.eu/solidarity_en" target="_blank">European Solidarity Corps</a>', vol2_loc: "Craiova, Romania",
                     vol2_desc: "Organizing non-formal education classes, promoting healthy lifestyle and European values, teaching swimming to kids, and supporting cultural events.",
@@ -304,7 +212,8 @@
                     vol3_desc: "Creating wooden furniture in remote villages and caring for adults with disabilities.",
                     vol4_title: 'Photographer | <a href="https://www.lapinamk.fi/en/Cooperation/RDI-Projects/InnoBarentsLab" target="_blank">InnoBarentsLab</a>', vol4_loc: "Rovaniemi, Finland",
                     vol4_desc: "Creating media materials for seminars: Arctic Design Week, Northern Stars Seminar.",
-                    vol5_title: '<a href="https://www.erciyes.edu.tr/tr/etkinlik-detay/bir-gun-degil-her-gun-3-aralik/7214" target="_blank">Pianist</a>', vol5_loc: 'Erciyes Culture Centre, Kayseri, Turkey',
+                    vol5_title: "Pianist",
+                    vol5_loc: 'Erciyes Culture Centre, Kayseri, Turkey',
                     vol5_desc: 'Piano performance at the International Day of Disabled Persons: “Bir Gün Değil, Her Gün 3 Aralık”.',
                     skills_lang_title: "Skills & Languages", skills_subtitle: "Skills", lang_subtitle: "Languages",
                     lang_header_lang: "Language", lang_header_level: "Level", lang_ru: "Russian", level_native: "Native",
@@ -315,36 +224,42 @@
                     reference_letters_title: "Reference Letters",
                     reference_letters_list: "<li>Available upon request.</li>",
                 },
-                // ... (other languages, similar updates for vol1_title and vol5_title) ...
                 ru: {
-                    // ... rest unchanged ...
-                    vol1_title: 'Волонтер Erasmus, организатор | <a href="https://www.esn.sk/" target="_blank">ESN</a>',
-                    vol1_loc: 'Университет Матея Бела, Банска-Бистрица',
-                    vol5_title: '<a href="https://www.erciyes.edu.tr/tr/etkinlik-detay/bir-gun-degil-her-gun-3-aralik/7214" target="_blank">Пианист</a>',
-                    vol5_loc: 'Культурный центр Эрджиес, Кайсери, Турция',
-                    reference_letters_title: "Рекомендательные письма",
-                    reference_letters_list: "<li>По запросу.</li>",
-                    // ... rest unchanged ...
+                    // ...Russian translations, same structure with vol1_title: "Волонтер Erasmus, организатор | ESN", vol5_title: "Пианист", etc...
                 },
                 de: {
-                    // ... rest unchanged ...
-                    vol1_title: 'Erasmus-Studentenfreiwilliger, Organisator | <a href="https://www.esn.sk/" target="_blank">ESN</a>',
-                    vol1_loc: 'Matej-Bel-Universität, Banská Bystrica',
-                    vol5_title: '<a href="https://www.erciyes.edu.tr/tr/etkinlik-detay/bir-gun-degil-her-gun-3-aralik/7214" target="_blank">Pianist</a>',
-                    vol5_loc: 'Kulturzentrum Erciyes, Kayseri, Türkei',
-                    reference_letters_title: "Empfehlungsschreiben",
-                    reference_letters_list: "<li>Auf Anfrage erhältlich.</li>",
-                    // ... rest unchanged ...
+                    // ...German translations, same structure with vol1_title: "... | ESN", vol5_title: "Pianist", etc...
                 }
             };
+
+            // Custom logic for special timeline fields with links
+            function setSpecialFields(lang) {
+                // vol1_title
+                const vol1 = document.querySelector('[data-lang-key="vol1_title"]');
+                if (vol1) {
+                    let title = translations[lang].vol1_title;
+                    // Insert ESN link at the end (replace ESN with a link)
+                    vol1.innerHTML = title.replace(/ESN/, `<a href="https://www.esn.sk/" target="_blank">ESN</a>`);
+                }
+                // vol5_title
+                const vol5 = document.querySelector('[data-lang-key="vol5_title"]');
+                if (vol5) {
+                    // Make Pianist a link for all languages
+                    vol5.innerHTML = `<a href="https://www.erciyes.edu.tr/tr/etkinlik-detay/bir-gun-degil-her-gun-3-aralik/7214" target="_blank">${translations[lang].vol5_title}</a>`;
+                }
+            }
+
             const langSwitcher = document.querySelector('.language-switcher');
             const changeLanguage = (lang) => {
                 document.querySelectorAll('[data-lang-key]').forEach(element => {
                     const key = element.dataset.langKey;
+                    // Skip special fields, done below
+                    if (key === "vol1_title" || key === "vol5_title") return;
                     if (translations[lang][key]) {
                         element.innerHTML = translations[lang][key];
                     }
                 });
+                setSpecialFields(lang);
                 document.documentElement.lang = lang;
             };
             langSwitcher.addEventListener('click', (e) => {
