--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
             <p><b data-lang-key="email_label">Email:</b> <a href="mailto:mikhail.lysyi@gmail.com">mikhail.lysyi@gmail.com</a></p>
             <p><b data-lang-key="social_label">Social Media:</b></p>
             <ul>
-                <li><a href="https://github.com/ваш_профиль" target="_blank">GitHub</a></li>
-                <li><a href="https://www.linkedin.com/in/ваш_профиль" target="_blank">LinkedIn</a></li>
-                <li><a href="https://www.instagram.com/ваш_профиль" target="_blank">Instagram</a></li>
+                <li><a href="https://github.com/gianmishgun" target="_blank">GitHub</a></li>
+                <li><a href="https://www.linkedin.com/in/mishalysyi/" target="_blank">LinkedIn</a></li>
+                <li><a href="https://www.instagram.com/divisible_invisible/" target="_blank">Instagram</a></li>
             </ul>
         </section>
 
