--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
                         <tbody>
                             <tr><td data-lang-key="lang_ru">Russian</td><td data-lang-key="level_native">Native</td></tr>
                             <tr><td>English</td><td>C1</td></tr>
-                            <tr><td>Slovak</td><td>B1</td></tr>
-                            <tr><td>German</td><td>A2</td></tr>
+                            tr><td>Slovak</td><td>B1</td></tr>
+                            <tr><td>German</td><td><a href="2024-11-28_onset_zertifikat-1.pdf" target="_blank">A2</a></td></tr>
                             <tr><td>French</td><td>A2</td></tr>
                         </tbody>
                     </table>
