--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                         <tbody>
                             <tr><td data-lang-key="lang_ru">Russian</td><td data-lang-key="level_native">Native</td></tr>
                             <tr><td>English</td><td>C1</td></tr>
-                            tr><td>Slovak</td><td>B1</td></tr>
+                            <tr><td>Slovak</td><td>B1</td></tr>
                             <tr><td>German</td><td><a href="2024-11-28_onset_zertifikat-1.pdf" target="_blank">A2</a></td></tr>
                             <tr><td>French</td><td>A2</td></tr>
                         </tbody>
@@ -276,7 +276,7 @@
                     add_courses_list: '<li><a href="https://uni-eszterhazy.hu/en" target="_blank">University of Tokaj</a> (summer university: cultural studies)</li><li><a href="https://www.ulapland.fi/EN" target="_blank">University of Lapland</a> (business administration, economy)</li><li><a href="https://arzamas.academy/" target="_blank">Arzamas Academy</a> (languages, history, social sciences)</li><li>Harvard College (via <a href="https://www.edx.org/" target="_blank">edX.org</a>: justice)</li><li>MIT (via <a href="https://ocw.mit.edu/" target="_blank">OpenCourseWare</a>: macroeconomics; cryptocurrencies)</li>',
                     work_title: "Work Experience",
                     work1_title: "English Language Teacher | Self Employed",
-                    work1_desc: "<li>Finding a methodology and creating an individual study program.</li><li>Successfully taught 5 students from elementary to intermediate/conversational level.</li><li>Preparation for SAT, IELTS, TOEFL.</li>",
+                    work1_desc: "<li>Finding a methodology and creating an individual study program.</li><li>Successfully taught many students from elementary to intermediate/conversational level.</li><li>Preparation for SAT, IELTS, TOEFL.</li>",
                     work2_title: "Safari & Travel Guide", work2_loc: "Rovaniemi, Finland",
                     work2_desc: '<li>Companies: <a href="https://laplandwelcome.fi/" target="_blank">Lapland Welcome LTD</a>, <a href="https://www.wonderlapland.com/" target="_blank">Wander Lapland LTD</a>, Helios Tour LTD.</li><li>Working in an international team and conducting winter tourist activities (snowmobile rides, ice fishing, etc.).</li><li>Training of junior guides.</li><li>Sales, database management, and partner communication.</li><li>Received positive feedback with zero accidents.</li>',
                     work3_title: "Junior Technical Specialist | Uberfon", work3_loc: "Saint Petersburg, Russia",
@@ -313,7 +313,7 @@
                     add_courses_list: '<li><a href="https://uni-eszterhazy.hu/en" target="_blank">Университет Токая</a> (летняя школа: культурология)</li><li><a href="https://www.ulapland.fi/EN" target="_blank">Университет Лапландии</a> (деловое администрирование, экономика)</li><li><a href="https://arzamas.academy/" target="_blank">Arzamas Academy</a> (языки, история, обществознание)</li><li>Гарвардский колледж (через <a href="https://www.edx.org/" target="_blank">edX.org</a>: правосудие)</li><li>MIT (через <a href="https://ocw.mit.edu/" target="_blank">OpenCourseWare</a>: макроэкономика; криптовалюты)</li>',
                     work_title: "Опыт работы",
                     work1_title: "Преподаватель английского языка | Частная практика",
-                    work1_desc: "<li>Разработка методологии и создание индивидуальных программ обучения.</li><li>Успешно обучил 5 студентов с начального до разговорного уровня.</li><li>Подготовка к экзаменам SAT, IELTS, TOEFL.</li>",
+                    work1_desc: "<li>Разработка методологии и создание индивидуальных программ обучения.</li><li>Успешно обучил много студентов студентов с начального до разговорного уровня.</li><li>Подготовка к экзаменам SAT, IELTS, TOEFL.</li>",
                     work2_title: "Сафари и туристический гид", work2_loc: "Рованиеми, Финляндия",
                     work2_desc: '<li>Компании: <a href="https://laplandwelcome.fi/" target="_blank">Lapland Welcome LTD</a>, <a href="https://www.wonderlapland.com/" target="_blank">Wander Lapland LTD</a>, Helios Tour LTD.</li><li>Работа в международной команде, проведение зимних туристических мероприятий (поездки на снегоходах, подледная рыбалка и т.д.).</li><li>Обучение младших гидов.</li><li>Продажи, управление базами данных и коммуникация с партнерами.</li><li>Получил положительные отзывы, ноль несчастных случаев.</li>',
                     work3_title: "Младший технический специалист | Uberfon", work3_loc: "Санкт-Петербург, Россия",
@@ -350,7 +350,7 @@
                     add_courses_list: '<li><a href="https://uni-eszterhazy.hu/en" target="_blank">Universität Tokaj</a> (Sommeruniversität: Kulturwissenschaften)</li><li><a href="https://www.ulapland.fi/EN" target="_blank">Universität Lappland</a> (Betriebswirtschaft, Volkswirtschaft)</li><li><a href="https://arzamas.academy/" target="_blank">Arzamas Academy</a> (Sprachen, Geschichte, Sozialwissenschaften)</li><li>Harvard College (über <a href="https://www.edx.org/" target="_blank">edX.org</a>: Gerechtigkeit)</li><li>MIT (über <a href="https://ocw.mit.edu/" target="_blank">OpenCourseWare</a>: Makroökonomie; Kryptowährungen)</li>',
                     work_title: "Berufserfahrung",
                     work1_title: "Englischlehrer | Selbstständig",
-                    work1_desc: "<li>Entwicklung einer Methodik und Erstellung individueller Lernprogramme.</li><li>Erfolgreich 5 Schüler vom Anfänger- bis zum Konversationsniveau unterrichtet.</li><li>Vorbereitung auf SAT, IELTS, TOEFL.</li>",
+                    work1_desc: "<li>Entwicklung einer Methodik und Erstellung individueller Lernprogramme.</li><li>Viele Schüler erfolgreich vom Anfänger- bis zum Mittelstufenniveau/Konversationsniveau unterrichtet.</li><li>Vorbereitung auf SAT, IELTS, TOEFL.</li>",
                     work2_title: "Safari- & Reiseleiter", work2_loc: "Rovaniemi, Finnland",
                     work2_desc: '<li>Unternehmen: <a href="https://laplandwelcome.fi/" target="_blank">Lapland Welcome LTD</a>, <a href="https://www.wonderlapland.com/" target="_blank">Wander Lapland LTD</a>, Helios Tour LTD.</li><li>Arbeit in einem internationalen Team und Durchführung von Wintertourismusaktivitäten (Schneemobilfahrten, Eisfischen usw.).</li><li>Ausbildung von Junior-Guides.</li><li>Verkauf, Datenbankverwaltung und Partnerkommunikation.</li><li>Erhielt positives Feedback ohne Unfälle.</li>',
                     work3_title: "Junior Technischer Spezialist | Uberfon", work3_loc: "Sankt Petersburg, Russland",
