english to the degree

--- a/index.html
+++ b/index.html
@@ -142,12 +142,12 @@
             <h3 data-lang-key="education_title">Education</h3>
             <div class="timeline">
                 <article class="timeline-item" data-year="2023-2026">
-                    <h4 data-lang-key="edu1_title">Bachelor of Business Economics and Management</h4>
+                    <h4 data-lang-key="edu1_title">Bachelor of Business Economics and Management (in English language)</h4>
                     <p><strong data-lang-key="edu1_uni"></strong>, <span data-lang-key="edu1_loc"></span></p>
                     <ul data-lang-key="edu1_desc"></ul>
                 </article>
                 <article class="timeline-item" data-year="2016-2020">
-                    <h4 data-lang-key="edu2_title">Bachelor of Business Administration in International Business</h4>
+                    <h4 data-lang-key="edu2_title">Bachelor of Business Administration in International Business (in English language)</h4>
                     <p><strong data-lang-key="edu2_uni"></strong>, <span data-lang-key="edu2_loc"></span></p>
                     <p data-lang-key="edu2_desc"></p>
                 </article>
@@ -268,9 +268,9 @@
                     home_title: "Contact Information", email_label: "Email:", social_label: "Social Media:",
                     cv_title: "Curriculum Vitae", download_cv: "📄 Download CV",
                     education_title: "Education",
-                    edu1_title: "Bachelor of Business Economics and Management", edu1_uni: '<a href="https://www.umb.sk/en/" target="_blank">Matej Bel University</a>', edu1_loc: "Banská Bystrica, Slovakia",
+                    edu1_title: "Bachelor of Business Economics and Management (in English language)", edu1_uni: '<a href="https://www.umb.sk/en/" target="_blank">Matej Bel University</a>', edu1_loc: "Banská Bystrica, Slovakia",
                     edu1_desc: '<li>Student Scientific Activity - 2024 - Case research of Misuse of AI. (<a href="https://konferencie.ef.umb.sk/SVA_24/2_EMP/prispevok/2_Lysyi_Oleshko.pdf" target="_blank">Full text of the paper</a>)</li><li>International business competition by Visegrad Fund - 2025 - team-leader of the winning team. (<a href="https://fir.vse.cz/news/from-mystery-to-mastery-v4-students-competed-in-business-case-competition/" target="_blank">Read more</a>)</li>',
-                    edu2_title: "Bachelor of Business Administration in International Business", edu2_uni: '<a href="https://www.lapinamk.fi/en/" target="_blank">Lapland University of Applied Sciences</a>', edu2_loc: "Rovaniemi, Finland",
+                    edu2_title: "Bachelor of Business Administration in International Business (in English language)", edu2_uni: '<a href="https://www.lapinamk.fi/en/" target="_blank">Lapland University of Applied Sciences</a>', edu2_loc: "Rovaniemi, Finland",
                     edu2_desc: "Unfinished due to insufficient funds.",
                     add_courses_title: "Additional Courses",
                     add_courses_list: '<li><a href="https://uni-eszterhazy.hu/en" target="_blank">University of Tokaj</a> (summer university: cultural studies)</li><li><a href="https://www.ulapland.fi/EN" target="_blank">University of Lapland</a> (business administration, economy)</li><li><a href="https://arzamas.academy/" target="_blank">Arzamas Academy</a> (languages, history, social sciences)</li><li>Harvard College (via <a href="https://www.edx.org/" target="_blank">edX.org</a>: justice)</li><li>MIT (via <a href="https://ocw.mit.edu/" target="_blank">OpenCourseWare</a>: macroeconomics; cryptocurrencies)</li>',
@@ -344,7 +344,7 @@
                     education_title: "Bildung",
                     edu1_title: "Bachelor in Betriebswirtschaft und Management", edu1_uni: '<a href="https://www.umb.sk/en/" target="_blank">Matej-Bel-Universität</a>', edu1_loc: "Banská Bystrica, Slowakei",
                     edu1_desc: '<li>Wissenschaftliche Tätigkeit der Studierenden (2024) - Fallforschung zum Missbrauch von KI. (<a href="https://konferencie.ef.umb.sk/SVA_24/2_EMP/prispevok/2_Lysyi_Oleshko.pdf" target="_blank">Volltext der Arbeit</a>)</li><li>Internationaler Geschäftswettbewerb des Visegrád-Fonds (2025) - Teamleiter des Gewinnerteams. (<a href="https://fir.vse.cz/news/from-mystery-to-mastery-v4-students-competed-in-business-case-competition/" target="_blank">Mehr lesen</a>)</li>',
-                    edu2_title: "Bachelor of Business Administration in International Business", edu2_uni: '<a href="https://www.lapinamk.fi/en/" target="_blank">Fachhochschule Lappland</a>', edu2_loc: "Rovaniemi, Finnland",
+                    edu2_title: "Bachelor of Business Administration in International Business (in English language)", edu2_uni: '<a href="https://www.lapinamk.fi/en/" target="_blank">Fachhochschule Lappland</a>', edu2_loc: "Rovaniemi, Finnland",
                     edu2_desc: "Nicht abgeschlossen aufgrund unzureichender Mittel.",
                     add_courses_title: "Zusätzliche Kurse",
                     add_courses_list: '<li><a href="https://uni-eszterhazy.hu/en" target="_blank">Universität Tokaj</a> (Sommeruniversität: Kulturwissenschaften)</li><li><a href="https://www.ulapland.fi/EN" target="_blank">Universität Lappland</a> (Betriebswirtschaft, Volkswirtschaft)</li><li><a href="https://arzamas.academy/" target="_blank">Arzamas Academy</a> (Sprachen, Geschichte, Sozialwissenschaften)</li><li>Harvard College (über <a href="https://www.edx.org/" target="_blank">edX.org</a>: Gerechtigkeit)</li><li>MIT (über <a href="https://ocw.mit.edu/" target="_blank">OpenCourseWare</a>: Makroökonomie; Kryptowährungen)</li>',
