--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                     home_title: "Kontaktinformationen", email_label: "Email:", social_label: "Soziale Medien:",
                     cv_title: "Lebenslauf", download_cv: "📄 Lebenslauf herunterladen",
                     education_title: "Bildung",
-                    edu1_title: "Bachelor in Betriebswirtschaft und Management", edu1_uni: '<a href="https://www.umb.sk/en/" target="_blank">Matej-Bel-Universität</a>', edu1_loc: "Banská Bystrica, Slowakei",
+                    edu1_title: "Bachelor of Business Economics and Management", edu1_uni: '<a href="https://www.umb.sk/en/" target="_blank">Matej-Bel-Universität</a>', edu1_loc: "Banská Bystrica, Slowakei",
                     edu1_desc: '<li>Wissenschaftliche Tätigkeit der Studierenden (2024) - Fallforschung zum Missbrauch von KI. (<a href="https://konferencie.ef.umb.sk/SVA_24/2_EMP/prispevok/2_Lysyi_Oleshko.pdf" target="_blank">Volltext der Arbeit</a>)</li><li>Internationaler Geschäftswettbewerb des Visegrád-Fonds (2025) - Teamleiter des Gewinnerteams. (<a href="https://fir.vse.cz/news/from-mystery-to-mastery-v4-students-competed-in-business-case-competition/" target="_blank">Mehr lesen</a>)</li>',
                     edu2_title: "Bachelor of Business Administration in International Business (in English language)", edu2_uni: '<a href="https://www.lapinamk.fi/en/" target="_blank">Fachhochschule Lappland</a>', edu2_loc: "Rovaniemi, Finnland",
                     edu2_desc: "Nicht abgeschlossen aufgrund unzureichender Mittel.",
