--- a/index.html
+++ b/index.html
@@ -150,6 +150,9 @@
                     <h4 data-lang-key="edu2_title">Bachelor of Business Administration in International Business (in English language)</h4>
                     <p><strong data-lang-key="edu2_uni"></strong>, <span data-lang-key="edu2_loc"></span></p>
                     <p data-lang-key="edu2_desc"></p>
+                    <span>
+                            Member of <a href="https://lapinrotko.fi/en/" target="_blank">ROTKO student union</a>
+                    </span>
                 </article>
             </div>
 
